--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,5 +18,5 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn clean install
+    - name: Build and test
+      run: mvn clean test
